
# Note: paths here are relative to the examples directory (this CMAKE_CURRENT_SOURCE_DIR).
add_subdirectory("device-media-renderer")
add_subdirectory("device-media-server" )
#add_subdirectory("device-media-server-ethernet" )
add_subdirectory("control-point-light" )
add_subdirectory("control-point-light-fast" )
add_subdirectory("control-point-media-renderer")
add_subdirectory("control-point-media-server" )
add_subdirectory("tests")
