

add_subdirectory("device-xml" )
add_subdirectory("device-xml-parser" )
add_subdirectory("http-server")
add_subdirectory("udp-receive")
add_subdirectory("udp-receive1" )
add_subdirectory("udp-send" )
add_subdirectory("xml-parser" )
add_subdirectory("xml-parser-print" )
add_subdirectory("xml-parser-action" )
